--- a/.net6withKeyVault/Dockerfile
+++ b/.net6withKeyVault/Dockerfile
@@ -6,10 +6,10 @@ EXPOSE 80
 EXPOSE 443
 
 ENV ASPNETCORE_ENVIRONMENT Staging
-ENV CLIENT_SECRET=zRT8Q~b-AOYVChR7JHxqYwW6mpnVIzc1u7lGTbZ3
-ENV TENANT_ID=c5dade78-23ca-4c48-86c5-ab8a9cdf6d79
-ENV CLIENT_ID=75328048-5f1e-4c64-8aff-29a4354e8ef5
-ENV KEY_VAULT_NAME=enmoraisvr
+ENV CLIENT_SECRET=
+ENV TENANT_ID=
+ENV CLIENT_ID=
+ENV KEY_VAULT_NAME=
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 ARG BUILD_CONFIGURATION=Release
